--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,9 +14,12 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "jsencrypt": "^3.3.2",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.31",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "5.2.2"
   }
 }
