--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,12 +12,14 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "clipboard": "^2.0.11",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "jsencrypt": "^3.2.1",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.12",
     "sweetalert2": "^11.7.31",
     "sweetalert2-react-content": "^5.0.7",
     "typescript": "5.2.2"
