--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "move_to_static_dir": "rm -rf ../static/* && mv out/* ../static/"
   },
   "dependencies": {
     "@types/node": "20.6.3",
